# json-schema-language-rust

./: .gitmodules  Cargo.toml  README.md
src/: errors.rs  lib.rs  registry.rs  schema.rs  serde.rs  validator.rs  vm.rs
tests/: spec_test.rs
