[package]
name = "jsl"
version = "0.1.0"
authors = ["Ulysse Carion <ulysse@segment.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "1.0"
error-chain = "0.12"
json-pointer = "0.3"
failure = "0.1"

[dev-dependencies]
pretty_assertions = "0.6"
