[package]
name = "jsl"
version = "0.1.1"
description = "JSON Schema Language validator and utilities."
license = "MIT"
documentation = "https://docs.rs/jsl"
homepage = "https://github.com/json-schema-language/json-schema-language-rust"
repository = "https://github.com/json-schema-language/json-schema-language-rust"
authors = ["Ulysse Carion <ulysse@segment.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "1.0"
json-pointer = "0.3"
failure = "0.1"

[dev-dependencies]
pretty_assertions = "0.6"
